--- a/client/src/components/ArtistDashboard/ArtistDashboardTopPlaylists/ArtistDashboardTopPlaylists.module.css
+++ b/client/src/components/ArtistDashboard/ArtistDashboardTopPlaylists/ArtistDashboardTopPlaylists.module.css
@@ -4,7 +4,7 @@
   background: var(--color-panel-gray);
   border: var(--border-size-md) solid var(--color-panel-border);
   border-radius: var(--border-radius-md);
-  max-width: 40rem;
+  max-width: 48rem;
 }
 
 .topPlaylistsTitle {
